--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       sravan953@gmail.com
 author:      Keerthi Sravan R
 description: ""
 baseurl:     ""
-url:         "http://sravan953.github.io"
+url:         "http://www.sravan953.github.io"
 
 # Google analytics
 google_analytics:
